seaqt/QtCore/gen_qtyperevision.h

class QTypeRevision;
typedef struct QTypeRevision QTypeRevision;
QTypeRevision* QTypeRevision_new();
QTypeRevision* QTypeRevision_new_from(QTypeRevision* from);
QTypeRevision* QTypeRevision_zero();
bool QTypeRevision_hasMajorVersion(const QTypeRevision* self);
unsigned char QTypeRevision_majorVersion(const QTypeRevision* self);
bool QTypeRevision_hasMinorVersion(const QTypeRevision* self);
unsigned char QTypeRevision_minorVersion(const QTypeRevision* self);
bool QTypeRevision_isValid(const QTypeRevision* self);